--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <!-- List all your javascript packages imports -->
+    <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <script type="importmap">
+      {
+        "imports": {
+          "bootstrap": "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js",
+          "sweetalert2": "https://cdn.jsdelivr.net/npm/sweetalert2@11/+esm"
+        }
+      }
+    </script>
   </head>
   <body>
     <!-- Navbar -->
@@ -18,12 +28,16 @@
     <div class="container">
       <!-- Your code here -->
 
-      <p class="my-5 text-center">Open the console 🤓</p>
+      <form action="" id="form">
+        <label for="email">Email</label>
+        <input type="text" name="email" id="email">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password">
+        <input type="submit" value="Login">
+      </form>
     </div>
 
-    <!-- Bootstrap JavaScript library -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- Your own JavaScript file -->
-    <script src="javascript/application.js"></script>
+    <script src="javascript/application.js" type="module"></script>
   </body>
 </html>
